- I fix narbar bug - I fixed the page overflow bug - I modifed the css - I add a load spinner to sign up page

--- a/client/src/styles/app.scss
+++ b/client/src/styles/app.scss
@@ -127,7 +127,7 @@ header {
 
   @media only screen and (min-width: 700px) {
     display: grid;
-    grid-template-columns: 23% 78%;
+    grid-template-columns: 23% 76%;
 }
 
   #ask_question{
@@ -141,6 +141,9 @@ header {
       left: 2.5em;
       font-size: 1.5em;
       margin-bottom: 1em;
+      @media only screen and (min-width: 700px) {
+        left: 1em;
+      }
       }
 
       p{
